# DocRefinery

./: .env.example  .gitignore  DOMAIN_NOTES.md  README.md  pyproject.toml  run.sh  run_pipeline.sh
docs/: architecture-diagram.html  architecture-diagram.mmd  architecture.md
rubric/: extraction_rules.yaml
scripts/: __init__.py  batch_process.py  chunk_from_extracted.py  export_markdown.py  run_pipeline.py  vector_explorer.py
src/: __init__.py
src/agents/: __init__.py  chunker.py  extractor.py  fact_extractor.py  indexer.py  query_agent.py  triage.py
src/llm/: __init__.py  client.py
src/models/: __init__.py  document_profile.py  extracted_document.py  ldu.py  page_index.py  provenance.py
src/strategies/: __init__.py  base.py  fast_text.py  layout_docling.py  vision_vlm.py
src/utils/: __init__.py  content_hash.py
tests/: conftest.py  test_chunker.py  test_domain_classifier.py  test_extraction_rules.py  test_extractor.py  test_models.py  test_pageindex.py  test_persistence.py  test_provenance.py  test_query_agent.py  test_section_propagation.py  test_triage.py
